Mon May 15 08:31:13 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/streams.h: 

          Undid the commenting out of #include <iomanip.h> for 
          ACE_USES_OLD_IOSTREAMS.  It had previously been commented
          out because of a problem with Qt.  A better solution would
          be to not include it only when ACE is used with Qt.

          This problem was showing up with Explicit_Event_Loop.

Sun May 14 12:43:35 2000  Darrell Brunsch <brunsch@uci.edu>

        (On behalf of Christopher Kohlhoff <chris@kohlhoff.com>)

        * ace/Makefile.bor:
        * include/makeinclude/ace_flags.bor:

          Added new file, moved ACE_BUILD_DLL macro into ACE library's
          makefile. Thanks also to Mogens Hansen <mogens_h@dk-online.dk>.

        * include/makeinclude/recurse.bor:

          Arguments like -i should now be propogated with makefile 
          recursion

Sun May 14 12:19:41 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/msvc_auto_compile.pl:

          Added a -TAO option to specify that the TAO subdirectory
          should be compiled.

Sat May 13 19:05:23 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/SString.cpp:

          Forgot to add a base member initialization for the allocator
          in the new ACE_USHORT16 constructor for ACE_WString.  Thanks
          to Chris Kohlhoff <chris@kohlhoff.com> for noticeing this.

Sat May 13 19:07:32 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/config-kcc-common.h: Added ACE_HAS_STRING_CLASS.  This fixed
	  the IOStream_Test.

Sat May 13 13:01:08 2000  Darrell Brunsch <brunsch@uci.edu>

        * tests/SString_Test.cpp:

          So yesterday I changed a type from ACE_USHORT16 to
          wchar_t.  Rather, it should have been ACE_WSTRING_TYPE.

Sat May 13 01:06:22 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/Local_Name_Space_T.cpp:
        * ace/Remote_Name_Space.cpp:

          SunCC 5 didn't like the template instantiations in the